# oauth2_backend_with_FastAPI

./: .gitignore  pyproject.toml  run.py
auth_app/: db.py  main.py  models.py
